k8s/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warrior
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiber-gateway
spec:
  replicas: 3
