k8s/overlays/prod/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiber-gateway
spec:
  template:
    spec:
      containers:
        - name: fiber-gateway
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warrior
spec:
  template:
    spec:
      containers:
        - name: warrior
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
