k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiber-gateway
spec:
  rules:
    - host: api.network.prod
